# WriterAgent

./: .gitignore  README.md  pyproject.toml
docs/plans/: 2026-04-03-generation-quality.md  2026-04-03-settings-system.md  2026-04-03-writer-agent.md  2026-04-04-interactive-agent.md
src/writer_agent/: __init__.py  cli.py  config.py  settings.py
src/writer_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/writer_agent/analysis/: __init__.py  parser.py  style.py  style_injector.py
src/writer_agent/db/: __init__.py  database.py  repositories.py
src/writer_agent/engine/: __init__.py  agent.py  agent_tools.py  brainstorm.py  consistency.py  context.py  generator.py  intent_router.py  plot_state.py  prompt_assembler.py  session_state.py
src/writer_agent/export/: __init__.py  exporter.py
src/writer_agent/llm/: __init__.py  client.py  prompts.py  scene_prompts.py
tests/: test_agent.py  test_brainstorm.py  test_cli.py  test_config.py  test_consistency.py  test_context.py  test_database.py  test_generation_quality.py  test_generator.py  test_intent_router.py  test_llm_client.py  test_parser.py  test_session_persistence.py  test_style.py
