[project]
name = "writer-agent"
version = "0.1.0"
description = "CLI agent for writing dark romance novels with LM Studio"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "openai>=1.30",
    "python-docx>=1.1",
    "pdfplumber>=0.11",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-mock>=3.14",
]

[project.scripts]
writer-agent = "writer_agent.cli:app"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
